#411 fix for layout issue in IE

--- a/src/main/scss/main.scss
+++ b/src/main/scss/main.scss
@@ -239,6 +239,7 @@ style for datapackage
 
 .fdz-group {
   margin: 1em;
+  display: block;
 }
 
 .fdz-group-text {
